Do not access `sc' directly via the CSR_{READ,WRITE}_[124] macros.

Patch provided by Amol via PR kern/51708.

ok <Riastradh>